src/grammar/.antlr/TyCParser.py
# Generated from d:\BTL_PPL_252\src\grammar\TyC.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'case'", "'continue'", "'default'", "'else'", "'float'", 
                     "'for'", "'if'", "'int'", "'return'", "'string'", "'struct'", 
                     "'switch'", "'void'", "'while'", "'++'", "'--'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "'||'", "'&&'", "'!'", "'='", 
                     "'.'", "'{'", "'}'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "BLOCK_COMMENT", "AUTO", 
                      "BREAK", "CASE", "CONTINUE", "DEFAULT", "ELSE", "FLOAT", 
                      "FOR", "IF", "INT", "RETURN", "STRING", "STRUCT", 
                      "SWITCH", "VOID", "WHILE", "INCREMENT", "DECREMENT", 
                      "ADDITION", "SUBTRACTION", "MULTI", "DIVISION", "MODULO", 
                      "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", "LOGICAL_OR", 
                      "LOGICAL_AND", "LOGICAL_NOT", "ASSIGNMENT", "MEMBER_ACCESS", 
                      "LEFT_BRACE", "RIGHT_BRACE", "LEFT_PAREN", "RIGHT_PAREN", 
                      "SEMICOLON", "COMMA", "COLON", "ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_func_decl = 3
    RULE_param_list = 4
    RULE_param_list_exist = 5
    RULE_param_decl = 6
    RULE_struct_decl = 7
    RULE_struct_member_list = 8
    RULE_struct_member = 9
    RULE_struct_var_decl_list = 10
    RULE_struct_var_decl_list_exist = 11
    RULE_struct_var_decl = 12
    RULE_struct_var_member_list = 13
    RULE_struct_var_member = 14
    RULE_var_decl_list = 15
    RULE_var_decl = 16
    RULE_auto_var_decl = 17
    RULE_explicit_var_decl = 18
    RULE_typ = 19
    RULE_primitive_typ = 20
    RULE_expr_list = 21
    RULE_expr = 22
    RULE_assign_lhs = 23
    RULE_or_expr = 24
    RULE_and_expr = 25
    RULE_eq_expr = 26
    RULE_relational_expr = 27
    RULE_add_sub_expr = 28
    RULE_multi_div_mod_expr = 29
    RULE_unary_expr = 30
    RULE_prefix_expr = 31
    RULE_postfix_expr = 32
    RULE_member_access_expr = 33
    RULE_operand = 34
    RULE_struct_lit = 35
    RULE_func_call_expr = 36
    RULE_paren_expr = 37
    RULE_stmt_list = 38
    RULE_stmt = 39
    RULE_var_decl_stmt = 40
    RULE_block_stmt = 41
    RULE_if_stmt = 42
    RULE_while_stmt = 43
    RULE_for_stmt = 44
    RULE_assign_for = 45
    RULE_init = 46
    RULE_condition = 47
    RULE_update = 48
    RULE_switch_stmt = 49
    RULE_switch_body = 50
    RULE_case_list_branch = 51
    RULE_case_list = 52
    RULE_case_stmt = 53
    RULE_break_stmt = 54
    RULE_continue_stmt = 55
    RULE_return_stmt = 56
    RULE_expr_stmt = 57

    ruleNames =  [ "program", "decl_list", "decl", "func_decl", "param_list", 
                   "param_list_exist", "param_decl", "struct_decl", "struct_member_list", 
                   "struct_member", "struct_var_decl_list", "struct_var_decl_list_exist", 
                   "struct_var_decl", "struct_var_member_list", "struct_var_member", 
                   "var_decl_list", "var_decl", "auto_var_decl", "explicit_var_decl", 
                   "typ", "primitive_typ", "expr_list", "expr", "assign_lhs", 
                   "or_expr", "and_expr", "eq_expr", "relational_expr", 
                   "add_sub_expr", "multi_div_mod_expr", "unary_expr", "prefix_expr", 
                   "postfix_expr", "member_access_expr", "operand", "struct_lit", 
                   "func_call_expr", "paren_expr", "stmt_list", "stmt", 
                   "var_decl_stmt", "block_stmt", "if_stmt", "while_stmt", 
                   "for_stmt", "assign_for", "init", "condition", "update", 
                   "switch_stmt", "switch_body", "case_list_branch", "case_list", 
                   "case_stmt", "break_stmt", "continue_stmt", "return_stmt", 
                   "expr_stmt" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    BLOCK_COMMENT=2
    AUTO=3
    BREAK=4
    CASE=5
    CONTINUE=6
    DEFAULT=7
    ELSE=8
    FLOAT=9
    FOR=10
    IF=11
    INT=12
    RETURN=13
    STRING=14
    STRUCT=15
    SWITCH=16
    VOID=17
    WHILE=18
    INCREMENT=19
    DECREMENT=20
    ADDITION=21
    SUBTRACTION=22
    MULTI=23
    DIVISION=24
    MODULO=25
    EQUAL=26
    NOT_EQUAL=27
    LESS_THAN=28
    GREATER_THAN=29
    LESS_THAN_EQUAL=30
    GREATER_THAN_EQUAL=31
    LOGICAL_OR=32
    LOGICAL_AND=33
    LOGICAL_NOT=34
    ASSIGNMENT=35
    MEMBER_ACCESS=36
    LEFT_BRACE=37
    RIGHT_BRACE=38
    LEFT_PAREN=39
    RIGHT_PAREN=40
    SEMICOLON=41
    COMMA=42
    COLON=43
    ID=44
    INT_LIT=45
    FLOAT_LIT=46
    STRING_LIT=47
    WS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(TyCParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.decl_list(0)
            self.state = 117
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(TyCParser.Decl_listContext,0)


        def decl(self):
            return self.getTypedRuleContext(TyCParser.DeclContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl_list



    def decl_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.Decl_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_decl_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 124
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TyCParser.Decl_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_decl_list)
                    self.state = 120
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 121
                    self.decl() 
                self.state = 126
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(TyCParser.Func_declContext,0)


        def struct_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_declContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_decl




    def decl(self):

        localctx = TyCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TyCParser.FLOAT, TyCParser.INT, TyCParser.STRING, TyCParser.VOID, TyCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.func_decl()
                pass
            elif token in [TyCParser.STRUCT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.struct_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LEFT_PAREN(self):
            return self.getToken(TyCParser.LEFT_PAREN, 0)

        def param_list(self):
            return self.getTypedRuleContext(TyCParser.Param_listContext,0)


        def RIGHT_PAREN(self):
            return self.getToken(TyCParser.RIGHT_PAREN, 0)

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(TyCParser.Stmt_listContext,0)


        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def typ(self):
            return self.getTypedRuleContext(TyCParser.TypContext,0)


        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_func_decl




    def func_decl(self):

        localctx = TyCParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 131
                self.typ()
                pass

            elif la_ == 2:
                self.state = 132
                self.match(TyCParser.VOID)
                pass

            elif la_ == 3:
                pass


            self.state = 136
            self.match(TyCParser.ID)
            self.state = 137
            self.match(TyCParser.LEFT_PAREN)
            self.state = 138
            self.param_list()
            self.state = 139
            self.match(TyCParser.RIGHT_PAREN)
            self.state = 140
            self.match(TyCParser.LEFT_BRACE)
            self.state = 141
            self.stmt_list(0)
            self.state = 142
            self.match(TyCParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list_exist(self):
            return self.getTypedRuleContext(TyCParser.Param_list_existContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_param_list




    def param_list(self):

        localctx = TyCParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param_list)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TyCParser.FLOAT, TyCParser.INT, TyCParser.STRING, TyCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.param_list_exist()
                pass
            elif token in [TyCParser.RIGHT_PAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_list_existContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(TyCParser.Param_declContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def param_list_exist(self):
            return self.getTypedRuleContext(TyCParser.Param_list_existContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_param_list_exist




    def param_list_exist(self):

        localctx = TyCParser.Param_list_existContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list_exist)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.param_decl()
                self.state = 149
                self.match(TyCParser.COMMA)
                self.state = 150
                self.param_list_exist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.param_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(TyCParser.TypContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param_decl




    def param_decl(self):

        localctx = TyCParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.typ()
            self.state = 156
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def struct_member_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_member_listContext,0)


        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_decl




    def struct_decl(self):

        localctx = TyCParser.Struct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(TyCParser.STRUCT)
            self.state = 159
            self.match(TyCParser.ID)
            self.state = 160
            self.match(TyCParser.LEFT_BRACE)
            self.state = 161
            self.struct_member_list(0)
            self.state = 162
            self.match(TyCParser.RIGHT_BRACE)
            self.state = 163
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_member_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_member_listContext,0)


        def struct_member(self):
            return self.getTypedRuleContext(TyCParser.Struct_memberContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_member_list



    def struct_member_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.Struct_member_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_struct_member_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self._ctx.stop = self._input.LT(-1)
            self.state = 170
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TyCParser.Struct_member_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_struct_member_list)
                    self.state = 166
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 167
                    self.struct_member() 
                self.state = 172
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Struct_memberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(TyCParser.TypContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_member




    def struct_member(self):

        localctx = TyCParser.Struct_memberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_struct_member)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.typ()
            self.state = 174
            self.match(TyCParser.ID)
            self.state = 175
            self.match(TyCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_var_decl_list_exist(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_decl_list_existContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_decl_list




    def struct_var_decl_list(self):

        localctx = TyCParser.Struct_var_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_struct_var_decl_list)
        try:
            self.state = 179
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TyCParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.struct_var_decl_list_exist(0)
                pass
            elif token in [TyCParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_var_decl_list_existContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_var_decl(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_declContext,0)


        def struct_var_decl_list_exist(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_decl_list_existContext,0)


        def COMMA(self):
            return self.getToken(TyCParser.COMMA, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_decl_list_exist



    def struct_var_decl_list_exist(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TyCParser.Struct_var_decl_list_existContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_struct_var_decl_list_exist, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.struct_var_decl()
            self._ctx.stop = self._input.LT(-1)
            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TyCParser.Struct_var_decl_list_existContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_struct_var_decl_list_exist)
                    self.state = 184
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 185
                    self.match(TyCParser.COMMA)
                    self.state = 186
                    self.struct_var_decl() 
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Struct_var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def SEMICOLON(self):
            return self.getToken(TyCParser.SEMICOLON, 0)

        def ASSIGNMENT(self):
            return self.getToken(TyCParser.ASSIGNMENT, 0)

        def LEFT_BRACE(self):
            return self.getToken(TyCParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(TyCParser.RIGHT_BRACE, 0)

        def struct_var_member_list(self):
            return self.getTypedRuleContext(TyCParser.Struct_var_member_listContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_struct_var_decl




    def struct_var_decl(self):
